# beastapp

./: .gitignore  CMakeLists.txt  README.md
include/common/: beast.hpp  net.hpp  shared_state.hpp
include/http/: http_session.hpp  listener.hpp
include/ws/: websocket_session.hpp
src/: main.cpp
src/common/: shared_state.cpp
src/http/: http_session.cpp  listener.cpp
src/ws/: websocket_session.cpp
www/: index.html  package-lock.json  package.json  proxy.js
